@@ -47,6 +47,7 @@ export(
   , ".DT_Cexp", ".DT_CIv", ".DT_Clog", ".DT_Cval", ".DT_exp", ".DT_log", ".DT_Log"
   , ".DT_qIv", ".DT_val"
   , log1mexp
+  , log1mexpC, log1pexpC, log1pmxC, lgamma1pC
   , M_SQRT2
   , M_LN2, M_cutoff, M_minExp
   , G_half
