@@ -4,7 +4,17 @@
 \title{DPQ News}
 \encoding{UTF-8}
 
-\section{Version 0.4-2 (2020-11-07, svn r150)}{
+\section{Version 0.4-3 (2020-..., svn r...)}{
+  \subsection{NEW FEATURES}{
+    \itemize{
+      \item Provide \R functions
+      \code{log1mexpC()}, \code{log1pexpC()}, \code{log1pmxC()}, and \code{lgamma1pC()},
+      all interfacing to \R's C API (\file{Rmath.h}), aka \sQuote{Rmathlib}.
+    }
+  }
+}
+
+\section{Version 0.4-2 (2020-11-07, svn r151)}{
   \subsection{NEW FEATURES}{
     \itemize{
       \item New functions \code{pnormL*()} and \code{pnormU*()} for
